@@ -1,19 +1,20 @@
 package com.feelow.Feelow.service;
 
+import com.feelow.Feelow.domain.dto.ChatResponseDto;
 import com.feelow.Feelow.domain.entity.Chat;
 import com.feelow.Feelow.domain.entity.Member;
 import com.feelow.Feelow.domain.dto.ResponseDto;
+import com.feelow.Feelow.domain.entity.Student;
 import com.feelow.Feelow.repository.ChatRepository;
 import com.feelow.Feelow.repository.MemberRepository;
+import com.feelow.Feelow.repository.StudentRepository;
 import lombok.AllArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
-import java.util.List;
-import java.util.Optional;
-import java.util.Random;
+import java.util.*;
 
 @Service
 @AllArgsConstructor
@@ -21,27 +22,44 @@ public class ChatService {
 
     private final ChatRepository chatRepository;
     private final MemberRepository memberRepository;
+    private final StudentRepository studentRepository;
 
-    public List<Chat> getChatRecords(Long memberId, String date) {
+    public List<ChatResponseDto> getChatRecords(Long memberId, String date) {
         List<Chat> chatRecords = chatRepository.findByMemberMemberIdAndDate(memberId, date);
+        List<ChatResponseDto> chatResponseDtos = new ArrayList<>();
+
+        for (Chat chatRecord : chatRecords) {
+            ChatResponseDto chatResponseDto = ChatResponseDto.builder()
+                    .input(chatRecord.getInput())
+                    .response(chatRecord.getResponse())
+                    .point(chatRecord.getMember().getStudent().getPoint())
+                    .build();
+            chatResponseDtos.add(chatResponseDto);
+        }
 
         if (chatRecords != null && !chatRecords.isEmpty()) {
-            return chatRecords;
+            return chatResponseDtos;
         } else {
             Chat firstChat = creatFirstChat(memberId, date);
             if (!(firstChat == null)){
                 chatRepository.save(firstChat);
+                ChatResponseDto chatResponseDto = ChatResponseDto.builder()
+                        .input(firstChat.getInput())
+                        .response(firstChat.getResponse())
+                        .point(firstChat.getMember().getStudent().getPoint() + 5)
+                        .build();
+                chatResponseDtos.add(chatResponseDto);
             }
             else {
-                return List.of();
+                return Collections.emptyList();
             }
-            return List.of(firstChat);
+            return chatResponseDtos;
         }
     }
 
 
     @Transactional
-    public ResponseDto<Chat> saveChat(Chat chat) {
+    public ResponseDto<ChatResponseDto> saveChat(Chat chat) {
         try {
             List<Chat> existingChats = chatRepository.findByMemberMemberIdAndDate(chat.getMember().getMemberId(), chat.getDate());
 
@@ -49,12 +67,38 @@ public class ChatService {
                 Chat lastChat = existingChats.get(existingChats.size() - 1);
                 Chat newChat = createNewChat(lastChat, chat);
                 chatRepository.save(newChat);
-                return ResponseDto.success("Chat saved successfully", newChat);
+
+                if (((lastChat.getConversationCount()) + 1) % 10 == 0){
+                    Member member = lastChat.getMember();
+                    Student student = member.getStudent();
+                    student.setPoint(student.getPoint() + 5);
+                    studentRepository.save(student);
+                }
+                int point = newChat.getMember().getStudent().getPoint();
+                ChatResponseDto chatResponseDto = ChatResponseDto.builder()
+                        .input(newChat.getInput())
+                        .response(newChat.getInput())
+                        .response(newChat.getResponse())
+                        .point(point)
+                        .build();
+
+                System.out.println(chatResponseDto);
+                return ResponseDto.success("Chat saved successfully", chatResponseDto);
             } else {
                 Chat firstChat = creatFirstChat(chat);
                 chatRepository.save(firstChat);
 
-                return ResponseDto.success("First chat saved successfully", firstChat);
+                int point = firstChat.getMember().getStudent().getPoint();
+                ChatResponseDto chatResponseDto = ChatResponseDto.builder()
+                        .input(firstChat.getInput())
+                        .response(firstChat.getInput())
+                        .response(firstChat.getResponse())
+                        .point(point)
+                        .build();
+
+                System.out.println(chatResponseDto);
+
+                return ResponseDto.success("First chat saved successfully", chatResponseDto);
             }
         } catch (Exception e) {
             e.printStackTrace();
@@ -82,7 +126,6 @@ public class ChatService {
                 .date(chat.getDate())
                 .input(null)
                 .inputTime(LocalDateTime.now())
-                .member(chat.getMember())
                 .response(getRandomResponse())
                 .build();
     }
@@ -91,6 +134,10 @@ public class ChatService {
         Optional<Member> memberOptional = memberRepository.findByMemberId(memberId);
         if (memberOptional.isPresent()) {
             Member member = memberOptional.get();
+            Student student = member.getStudent();
+            student.setPoint(student.getPoint() + 5);
+            studentRepository.save(student);
+
             return Chat.builder()
                     .member(member)
                     .conversationCount(1)
